Made loadout stereo horizontal, shadow map disabled

--- a/ShaderConfigs/GUI - Render Targets.ini
+++ b/ShaderConfigs/GUI - Render Targets.ini
@@ -1,59 +1,57 @@
 [Constants]
-global $loadout_stage=0
 global $loadout_shader=0
+global $in_loadout=0
+global $in_loadout_prev=0
+
+[Present]
+$in_loadout_prev = $in_loadout
+$in_loadout=0
 
 [TextureOverride_AllRenderTargets]
 match_type = Texture2D
 match_bind_flags = +render_target
 match_width = = height * 16/9
-stereomode=2
+stereomode=1
 
-; Stereo RT, alternative to 63d7d532
-[Resource_StereoLoadoutRenderTarget]
+[ShaderOverride_ShadowMap]
+hash=7c5d68afebead6cc
+x3=$in_loadout_prev
+
+[Resource_LoadoutRenderTargetStereo]
 mode=stereo
+max_copies_per_frame=1
 
 ; This RT is used for shadow maps, but is also used to 
 ; store the Loadout render before drawing it to the screen.
 ; When a shader below is Reading/Writing to this RT, 
 ; we swap it out for an identical one except stereo.
-[TextureOverride_ShadowMap]
-hash=63d7d532
-if $loadout_shader == $loadout_stage
-    if $loadout_stage == 1
-        pre Resource_StereoLoadoutRenderTarget = copy_desc o0
-        pre o0 = ref Resource_StereoLoadoutRenderTarget
-        post $loadout_stage = 2
-    else if $loadout_stage == 2
-        ; this is equivalent to texture_filter for HUD layers
-        pre x2=-5
-        pre ps-t0 = ref Resource_StereoLoadoutRenderTarget
-        post Resource_StereoLoadoutRenderTarget = null
-        post $loadout_stage = 0
-    endif
+[TextureOverride_LoadoutRenderTargetMono]
+match_type = Texture2D
+match_bind_flags = +render_target
+match_width = height
+match_format = R8G8B8A8_UNORM
+if $loadout_shader == 1
+    pre Resource_LoadoutRenderTargetStereo = copy_desc o0
+    pre o0 = ref Resource_LoadoutRenderTargetStereo
+    $in_loadout=1
+else if $loadout_shader == 2
+    ; this is equivalent to texture_filter for HUD layers
+    pre x2=-5
+    pre ps-t0 = ref Resource_LoadoutRenderTargetStereo
 endif
 
 ; Reads from multiple sources and writes to RT
 ; Loadout only: Writes to the replacement stereo RT
 [ShaderOverride_CombineLoadoutRTs]
 hash=d979b3967eb5f0d3
-if $loadout_stage == 0
-    pre $loadout_stage = 1
-endif
 pre $loadout_shader = 1
 pre checktextureoverride = o0
 post $loadout_shader = 0
-; change it back to 0 if unchanged
-if $loadout_stage == 1
-    post $loadout_stage = 0
-endif
 
 ; Draws textures to the ShadowNet/Loadout menu
 ; Loadout only: Reads from the replacement stereo RT
 [ShaderOverride_ShadowNet_Decorations_PS]
 hash=d8f047b122d01aab
-if $loadout_stage == 1
-    pre $loadout_stage = 2
-endif
 pre $loadout_shader = 2
 pre checktextureoverride = ps-t0
 post $loadout_shader = 0
