--- a/d3dx.ini
+++ b/d3dx.ini
@@ -25,8 +25,8 @@ include = ShaderFixes\Custom\upscale.ini
 ; Note that this shader has a higher latency than the hardware cursor!
 include = ShaderFixes\Custom\mouse.ini
 
-include = ShaderFixes\Custom\debug_2d.ini
-include = ShaderFixes\Custom\debug_cb.ini
+;include = ShaderFixes\Custom\debug_2d.ini
+;include = ShaderFixes\Custom\debug_cb.ini
 
 ; Uncomment to enable a custom shader that allows the stereo output mode to be
 ; changed to Side-by-Side or Top-and-Bottom via the F11 key. If you are using
@@ -546,7 +546,7 @@ allow_platform_update=1
 ;      otherwise you will see only a black window (with game sound).
 ;   2) Set a custom resolution here for width and height that the game will see.
 ;   3) Uncomment upscale_mode here.
-upscaling = 1
+upscaling = 0
 
 ; Force override the screen resolution.
 ; If upscaling is on, the resizing functionality is disabled.
