Sniper upgrade crosshair triggers preset, fixed goals messing up HUD text and added layer for missing 'recommended' icon in loadout

--- a/ShaderConfigs/GUI - HUD.ini
+++ b/ShaderConfigs/GUI - HUD.ini
@@ -7,16 +7,20 @@ transition_type = linear
 [TextureOverride_AmmoBG]
 hash=59b8b2d0
 filter_index=4.5
-[TextureOverride_Chevron1]
+; Used for HUD and tracking target, but we can't distinguish them, so skip
+[TextureOverride_TargetGlow]
+hash=306efa21
+handling=skip
+[TextureOverride_Target1]
 hash=45105fa9
 filter_index=4.5
-[TextureOverride_Chevron2]
+[TextureOverride_Target2]
 hash=5647abd9
 filter_index=4.5
-[TextureOverride_Chevron3]
+[TextureOverride_Target3]
 hash=020e1213
 filter_index=4.5
-[TextureOverride_GadgetBG]
+[TextureOverride_CounterBG]
 hash=bb37afca
 filter_index=4.5
 [TextureOverride_RadarArrow]
@@ -49,6 +53,9 @@ filter_index=4.5
 [TextureOverride_RadarHatching]
 hash=c875aaab
 filter_index=4.5
+[TextureOverride_SpecialBG]
+hash=6263046e
+filter_index=4
 [TextureOverride_IconNoiseMaker]
 hash=4c4f27a2
 filter_index=4.5
@@ -95,6 +102,10 @@ filter_index=4.5
 hash=23aa95b2
 filter_index=4.5
 
-[TextureOverride_Sniper]
+[TextureOverride_SniperLow]
 hash=a152014e
+preset=PresetSniper
+
+[TextureOverride_SniperHigh]
+hash=ee9d3047
 preset=PresetSniper
