--- a/ShaderConfigs/GUI - HUD_Depth.ini
+++ b/ShaderConfigs/GUI - HUD_Depth.ini
@@ -1,3 +1,4 @@
+; Start/End Crosshair = -1
 [TextureOverride_Crosshair1]
 hash=4a15fb60
 filter_index=-1
@@ -11,12 +12,13 @@ filter_index=-1
 hash=484ed273
 filter_index=-1
 
-[TextureOverride_GoalCentre]
-hash=b5e01512
-filter_index=-2.25
+; Start of Goal = -2
 [TextureOverride_GoalOuter]
 hash=89951c97
 filter_index=-2
+[TextureOverride_GoalCentre]
+hash=b5e01512
+filter_index=-2.25
 [TextureOverride_GoalArrow]
 hash=73b56261
 filter_index=-2.25
@@ -29,19 +31,20 @@ filter_index=-2.25
 [TextureOverride_GoalDecoration2]
 hash=d5f8a4d4
 filter_index=-2.25
+; End of Goal = -2.5
+; Used for lots of things in the HUD, not just the Goal
 [TextureOverride_GoalBackground]
 hash=d860b2d5
 filter_index=-2.5
 
+; Start of Target = -3
 [TextureOverride_TargetMark1]
 hash=90d0b12f
 filter_index=-3
 [TextureOverride_TargetMark2]
 hash=62de70a7
-filter_index=-3
+filter_index=-3.25
+; End of Target = -3.5
 [TextureOverride_TargetMark3]
 hash=2971c2e6
-filter_index=-3
-[TextureOverride_TargetMarkBG]
-hash=306efa21
-filter_index=-3
+filter_index=-3.5
