--- a/ShaderConfigs/GUI - Loadout.ini
+++ b/ShaderConfigs/GUI - Loadout.ini
@@ -1,6 +1,9 @@
 [TextureOverride_IconTick]
 hash=e11f8214
 filter_index=5
+[TextureOverride_IconRecommended]
+hash=b08f1ed6
+filter_index=5
 [TextureOverride_IconLock]
 hash=02cace63
 filter_index=5
