--- a/ShaderConfigs/GUI.ini
+++ b/ShaderConfigs/GUI.ini
@@ -7,11 +7,19 @@ global persist $shader_index=0
 global persist $shader_isolation=0
 global persist $hide_ui=0
 global $menu_open=0
+global $goals=0
+global $goalTexts=0
+global $goalBGs=0
+global $noDepth=0
 
 [Present]
 y2=0
 z2=$gui_depth
 $menu_open=0
+$goals=0
+$goalTexts=0
+$goalBGs=0
+$noDepth=0
 
 [KeyToggleUI]
 ; Hash/Tilde #/~
@@ -141,16 +149,6 @@ vs=ShaderFixes/depth_adjust_quad_vs_batched.hlsl
 ps=ShaderFixes/depth_adjust_quad_ps.hlsl
 run=CommandListOutputGoalBounds
 
-[CustomShaderOutputGoalBoundsText]
-vs=ShaderFixes/depth_adjust_quad_text.hlsl
-ps=ShaderFixes/depth_adjust_quad_text.hlsl
-run=CommandListOutputGoalBounds
-
-[CustomShaderOutputGoalBoundsTextBatched]
-vs=ShaderFixes/depth_adjust_quad_text_batched.hlsl
-ps=ShaderFixes/depth_adjust_quad_text_batched.hlsl
-run=CommandListOutputGoalBounds
-
 [CommandListOutputGoalBounds]
 run=BuiltInCommandListUnbindAllRenderTargets
 run=CommandListGUIShaderNoDump
@@ -161,7 +159,6 @@ o0=set_viewport Resource1x1
 ps-u1=ResourceDepthValue
 post ps-u1=null
 draw=from_caller
-;dump=ps-t0 mono dds
 
 [ShaderOverrideDepthSource]
 hash=29b5047597d81be1
@@ -182,19 +179,38 @@ run=CommandListDisplayDepth
 ;endif
 
 [CommandListDepthGoal]
-vs-t14=ResourceDepthValue
-post vs-t14=null
-if (ps-t0 == -2.5 || ps-t0 == -1)
-post clear=ResourceDepthValue
+; If no depth has been calculated this does nothing
+if (!$noDepth)
+	vs-t14=ResourceDepthValue
 endif
-;if (x2 <= -2)
-;analyse_options=dump_cb txt dump_tex mono dds
-;endif
+post vs-t14=null
+; Start of Goal
+if (ps-t0 == -2)
+	post $goals = $goals + 1
+endif
+; End of Goal (2 drawn)
+if (ps-t0 == -2.5)
+	post $goalBGs = $goalBGs + 1
+endif
+; Reset Depth @ End of Target/Goal/Crosshair
+if ((ps-t0 == -2.5 && $goalBGs == 2) || ps-t0 == -3.5 || ps-t0 == -1)
+	post $goalBGs = 0
+	post clear=ResourceDepthValue
+endif
 
 [ShaderOverride_Text]
 hash=6f56e2eb15c63f14
-if (ps-t0 == -2)
-	run=CustomShaderOutputGoalBoundsText
+; Goal texts are drawn first, we count them
+if ($goals)
+	post $goalTexts = $goalTexts + 1
+endif
+; Two texts are drawn per Goal, 
+; we know how many goals have been drawn, 
+; so if we exceed 2*Goals, don't use depth
+if ($goalTexts >= ($goals * 2))
+	pre $noDepth=1
+	; reset so further goal graphics use depth
+	post $noDepth=0
 endif
 y2=1
 run=CommandListGUIShaderNoTextures
@@ -202,9 +218,6 @@ run=CommandListDepthGoal
 
 [ShaderOverride_TextBatched]
 hash=9fe114e79584a0ac
-if (ps-t0 == -2)
-	run=CustomShaderOutputGoalBoundsTextBatched
-endif
 y2=2
 run=CommandListGUIShaderNoTextures
 run=CommandListDepthGoal
@@ -217,7 +230,8 @@ run=CommandListMenuShader
 
 [ShaderOverride_DecorationsBatched]
 hash=55642c752fa497f2
-if (ps-t0 == -2 || ps-t0 == -1)
+; Calculate Depth @ Start of Target/Goal/Crosshair
+if (ps-t0 == -3 || ps-t0 == -2 || ps-t0 == -1)
 	run=CustomShaderOutputGoalBoundsBatched
 endif
 y2=8
@@ -226,15 +240,14 @@ run=CommandListDepthGoal
 
 [ShaderOverride_HUD+Images1]
 hash=7fdf27a3924d5530
-if (ps-t0 == -2)
+; Calculate Depth @ Start of Target/Goal/Crosshair
+if (ps-t0 == -3 || ps-t0 == -2 || ps-t0 == -1)
 	run=CustomShaderOutputGoalBounds
 endif
 y2=3
 run=CommandListGUIShader
 run=CommandListDepthGoal
 vs-cb11=ResourceMatrices
-;Resource\ShaderFixes\Custom\debug_cb.ini\DebugBuf=ResourceDepthValue
-;dump=ResourceDepthValue
 
 [ShaderOverride_HUD+Images2]
 hash=9ceefab76c72863a
@@ -316,13 +329,14 @@ hash=dd967c664d38d1cd
 checktextureoverride=ps-t1
 
 ;run= CommandListDumpTex
-
 [CommandListDumpTex]
 analyse_options=dump_tex dds mono
 [CommandListDumpTex0]
 dump=dump_tex dds mono ps-t0
 [CommandListDumpTex0Stereo]
 dump=dump_tex jps stereo ps-t0
+[CommandListDumpRT]
+post dump=dump_tex jpg mono o0
 [CommandListDumpCB]
 analyse_options=dump_cb txt
 [CommandListDumpVB]
