Fixed Execute message and selected depth

--- a/ShaderConfigs/GUI - HUD.ini
+++ b/ShaderConfigs/GUI - HUD.ini
@@ -11,15 +11,18 @@ filter_index=4.5
 [TextureOverride_TargetGlow]
 hash=306efa21
 handling=skip
-[TextureOverride_Target1]
+[TextureOverride_TargetBG1]
 hash=45105fa9
 filter_index=4.5
-[TextureOverride_Target2]
-hash=5647abd9
-filter_index=4.5
-[TextureOverride_Target3]
+[TextureOverride_TargetBG2]
 hash=020e1213
 filter_index=4.5
+[TextureOverride_TargetSelected]
+hash=5647abd9
+filter_index=5
+[TextureOverride_TargetMsg]
+hash=c442e026
+filter_index=5
 [TextureOverride_CounterBG]
 hash=bb37afca
 filter_index=4.5
