Added TriRotor Preset

--- a/ShaderConfigs/GUI - HUD_Depth.ini
+++ b/ShaderConfigs/GUI - HUD_Depth.ini
@@ -1,16 +1,24 @@
+[PresetTriRotor]
+convergence = 75
+
 ; Start/End Crosshair = -1
 [TextureOverride_Crosshair1]
 hash=4a15fb60
 filter_index=-1
 [TextureOverride_Crosshair2]
-hash=9941830c
-filter_index=-1
-[TextureOverride_Crosshair3]
 hash=c11fb4b5
 filter_index=-1
-[TextureOverride_Crosshair4]
+[TextureOverride_Crosshair3]
 hash=484ed273
 filter_index=-1
+
+[TextureOverride_CrosshairTriRotor]
+hash=9941830c
+filter_index=-1
+[TextureOverride_CrosshairTriRotorBox]
+hash=0a5f1dbb
+filter_index=-1
+preset=PresetTriRotor
 
 ; Start of Goal = -2
 [TextureOverride_GoalOuter]
@@ -22,13 +30,13 @@ filter_index=-2.25
 [TextureOverride_GoalArrow]
 hash=73b56261
 filter_index=-2.25
-[TextureOverride_GoalDecoration0]
+[TextureOverride_GoalDecoBox]
 hash=873db96b
 filter_index=-2.25
-[TextureOverride_GoalDecoration1]
+[TextureOverride_GoalDecoText1]
 hash=88cac974
 filter_index=-2.25
-[TextureOverride_GoalDecoration2]
+[TextureOverride_GoalDecoText2]
 hash=d5f8a4d4
 filter_index=-2.25
 ; End of Goal = -2.5
