--- a/Configs/Render Targets.ini
+++ b/Configs/Render Targets.ini
@@ -1,5 +1,4 @@
 [Constants]
-global $loadout_shader=0
 global $in_loadout=0
 global $in_loadout_prev=0
 
@@ -11,6 +10,8 @@ $in_loadout=0
 match_type = Texture2D
 match_bind_flags = +render_target
 match_width = = height * 16/9
+;match_width = res_width
+;match_height = res_height
 stereomode=1
 
 [ShaderOverride_ShadowMap]
@@ -63,9 +64,9 @@ filter_index = -5
 
 ; Reads from multiple sources and writes to RT
 ; Loadout only: Writes to the replacement stereo RT
-[ShaderOverride_CombineLoadoutRTs]
+[ShaderOverride_CompositeLoadout]
 hash=d979b3967eb5f0d3
-if (ps-t0 == -5)
+if (o0 == -5)
     pre Resource_LoadoutRenderTargetStereo = copy_desc o0
     pre o0 = ref Resource_LoadoutRenderTargetStereo
     $in_loadout=1
@@ -73,7 +74,7 @@ endif
 
 ; Draws textures to the ShadowNet/Loadout menu
 ; Loadout only: Reads from the replacement stereo RT
-[ShaderOverride_ShadowNet_Decorations_PS]
+[ShaderOverride_LoadoutSprites]
 hash=d8f047b122d01aab
 if (ps-t0 == -5)
     ; this is equivalent to filter_index for HUD layers
