Moved things around and renaming

--- a/Addons/debug_2d.ini
+++ b/Addons/debug_2d.ini
@@ -8,8 +8,8 @@ run = CustomShaderDebug2D
 [ResourceDebug2D]
 max_copies_per_frame = 1
 [CustomShaderDebug2D]
-vs = ShaderFixes\Custom\debug_2d.hlsl
-ps = ShaderFixes\Custom\debug_2d.hlsl
+vs = debug_2d.hlsl
+ps = debug_2d.hlsl
 blend = disable
 ;blend = ADD ONE ONE
 cull = none
