--- a/Addons/debug_cb.ini
+++ b/Addons/debug_cb.ini
@@ -23,16 +23,16 @@ bind_flags = unordered_access shader_resource
 ; space of the final character, which the geometry shader uses to render each
 ; character the correct width. This font was generated with gen_bm_font.py,
 ; then converted to DDS (because our PNG loading seems to be broken o_O):
-filename = ShaderFixes/Custom/LiberationSans-Bold.png
+filename = LiberationSans-Bold.png
 [CustomShaderDebugCB]
 ; The vertex shader passes constant buffer indexes to the geometry shader:
-vs = ShaderFixes/Custom/debug_cb.hlsl
+vs = debug_cb.hlsl
 hs = null
 ds = null
 ; The geometry shader generates the text for a given constant buffer index:
-gs = ShaderFixes/Custom/debug_cb.hlsl
+gs = debug_cb.hlsl
 ; The pixel shader draws the font:
-ps = ShaderFixes/Custom/debug_cb.hlsl
+ps = debug_cb.hlsl
 ; Disable compiler optimisations to save 1.5 seconds every F10. The shader
 ; becomes significantly larger and potentially slower, but that doesn't matter
 ; since it is a debugging shader:
