--- a/Configs/Render Targets.ini
+++ b/Configs/Render Targets.ini
@@ -30,28 +30,24 @@ match_type = Texture2D
 match_bind_flags = +render_target
 match_width = height
 match_format = R8G8B8A8_UNORM
-if $loadout_shader == 1
-    pre Resource_LoadoutRenderTargetStereo = copy_desc o0
-    pre o0 = ref Resource_LoadoutRenderTargetStereo
-    $in_loadout=1
-else if $loadout_shader == 2
-    ; this is equivalent to texture_filter for HUD layers
-    pre x2=-5
-    pre ps-t0 = ref Resource_LoadoutRenderTargetStereo
-endif
+filter_index = -5
 
 ; Reads from multiple sources and writes to RT
 ; Loadout only: Writes to the replacement stereo RT
 [ShaderOverride_CombineLoadoutRTs]
 hash=d979b3967eb5f0d3
-pre $loadout_shader = 1
-pre checktextureoverride = o0
-post $loadout_shader = 0
+if (ps-t0 == -5)
+    pre Resource_LoadoutRenderTargetStereo = copy_desc o0
+    pre o0 = ref Resource_LoadoutRenderTargetStereo
+    $in_loadout=1
+endif
 
 ; Draws textures to the ShadowNet/Loadout menu
 ; Loadout only: Reads from the replacement stereo RT
 [ShaderOverride_ShadowNet_Decorations_PS]
 hash=d8f047b122d01aab
-pre $loadout_shader = 2
-pre checktextureoverride = ps-t0
-post $loadout_shader = 0
+if (ps-t0 == -5)
+    ; this is equivalent to filter_index for HUD layers
+    pre x2=-5
+    pre ps-t0 = ref Resource_LoadoutRenderTargetStereo
+endif
