--- a/d3dx.ini
+++ b/d3dx.ini
@@ -10,23 +10,22 @@
 ; Resource sections (Replaced shaders in these mods should still go in
 ; ShaderFixes for now, unless the modders want to use CustomShaders or
 ; ShaderRegex to keep them standalone).
-include_recursive = ShaderConfigs
+include_recursive = Configs
 exclude_recursive = DISABLED*
-exclude_recursive = Custom
 
 ; Uncomment to enable a custom shader that allows the stereo output mode to be
 ; upscaled. NOTE: uncomment only if 'upscaling' and resolution are not zero in
 ; the [Device] section.
-include = ShaderFixes\Custom\upscale.ini
+include = Addons\upscale.ini
 
 ; Uncomment to enable a custom shader that implements a software mouse cursor.
 ; Use in games that use a hardware cursor if you want to be able to adjust the
 ; stereo depth of the mouse, or to work with the below 3DVision2SBS shader.
 ; Note that this shader has a higher latency than the hardware cursor!
-include = ShaderFixes\Custom\mouse.ini
+include = Addons\mouse.ini
 
-;include = ShaderFixes\Custom\debug_2d.ini
-;include = ShaderFixes\Custom\debug_cb.ini
+;include = Addons\debug_2d.ini
+;include = Addons\debug_cb.ini
 
 ; Uncomment to enable a custom shader that allows the stereo output mode to be
 ; changed to Side-by-Side or Top-and-Bottom via the F11 key. If you are using
@@ -34,7 +33,7 @@ include = ShaderFixes\Custom\mouse.ini
 ; need to also set StereoFlagsDX10 = 0x00000008 in the [Profile] section. You
 ; can set a default mode by altering $\ShaderFixes\3dvision2sbs.ini\mode in the
 ; [Constants] section:
-include = ShaderFixes\Custom\3dvision2sbs.ini
+include = Addons\3dvision2sbs.ini
 
 
 ;------------------------------------------------------------------------------------------------------
@@ -108,7 +107,7 @@ crash=0
 ; 5 = Reversed Top and Bottom
 ; 6 = Line interlacing
 ; 7 = Reversed Line interlacing
-; $\ShaderFixes\Custom\3dvision2sbs.ini\mode=0
+; $\Addons\3dvision2sbs.ini\mode=0
 x7=7
 y2=0
 
