Made menu shader isolation better, freed up y2

--- a/Configs/Menu Common Shaders.ini
+++ b/Configs/Menu Common Shaders.ini
@@ -2,20 +2,26 @@
 ;analyse_options=dump_tex dds mono
 
 [Constants]
-global persist $gui_depth=0
-global persist $shader_index=0
+global persist $gui_separation=0
+global persist $isolate_id=0
 global persist $shader_isolation=0
 global persist $hide_ui=0
+global $shader_id=0
+global $max_id=0
+global $max_id_prev=0
 global $menu_open=0
+; Goals
 global $goals=0
 global $goalTexts=0
 global $goalBGs=0
 global $noDepth=0
 
 [Present]
-y2=0
-z2=$gui_depth
+z2=$gui_separation
 $menu_open=0
+$max_id_prev=$max_id
+$max_id=0
+; Goals
 $goals=0
 $goalTexts=0
 $goalBGs=0
@@ -43,7 +49,10 @@ Key=VK_OEM_PLUS
 run=CommandListIncrementShaderID
 
 [CommandListIncrementShaderID]
-$shader_index=$shader_index + 1
+$isolate_id=$isolate_id + 1
+if ($isolate_id > $max_id_prev)
+	$isolate_id = $max_id_prev
+endif
 
 [KeyDecreaseUIShader]
 ; Minus/Underscore -/_
@@ -51,12 +60,15 @@ Key=VK_OEM_MINUS
 run=CommandListDecrementShaderID
 
 [CommandListDecrementShaderID]
-$shader_index=$shader_index - 1
+$isolate_id=$isolate_id - 1
+if ($isolate_id < 0)
+	$isolate_id = 0
+endif
 
 [KeyResetUIDepth]
 ; Apostrophe/At '/@
 Key=VK_OEM_3 
-$gui_depth=0
+$gui_separation=0
 
 [KeyDecreaseUIDepth]
 ; Open Square/Curly Bracket [/{
@@ -69,16 +81,16 @@ Key=VK_OEM_6
 run=CommandListIncrementDepthID
 
 [CommandListResetDepthID]
-$gui_depth=0
-z2=$gui_depth
+$gui_separation=0
+z2=$gui_separation
 
 [CommandListIncrementDepthID]
-$gui_depth=$gui_depth + 1
-z2=$gui_depth
+$gui_separation=$gui_separation + 1
+z2=$gui_separation
 
 [CommandListDecrementDepthID]
-$gui_depth=$gui_depth - 1
-z2=$gui_depth
+$gui_separation=$gui_separation - 1
+z2=$gui_separation
 
 [CommandListMenuShader]
 $menu_open=(rt_width == res_width)
@@ -91,12 +103,16 @@ run=CommandListGUIShaderNoDump
 run=CommandListGUIShaderNoTextures
 checktextureoverride=ps-t0
 x2=ps-t0
-w2=$menu_open
+y2=$menu_open
 
 [CommandListGUIShaderNoTextures]
-if $hide_ui || ($shader_isolation && $shader_index != y2)
+if $hide_ui || ($shader_isolation && $isolate_id != $shader_id)
 	handling=skip
 endif
+if ($max_id < $shader_id)
+	$max_id = $shader_id
+endif
+$shader_id=0
 run=CommandListResolution
 
 [CommandListResolution]
@@ -104,7 +120,6 @@ x=rt_width
 y=rt_height
 z=res_width
 w=res_height
-x3=o0
 
 [Constants]
 global $show_depth=0
@@ -212,19 +227,19 @@ if ($goalTexts >= ($goals * 2))
 	; reset so further goal graphics use depth
 	post $noDepth=0
 endif
-y2=1
+$shader_id=1
 run=CommandListGUIShaderNoTextures
 run=CommandListDepthGoal
 
 [ShaderOverride_TextBatched]
 hash=9fe114e79584a0ac
-y2=2
+$shader_id=2
 run=CommandListGUIShaderNoTextures
 run=CommandListDepthGoal
 
 [ShaderOverride_Decorations]
 hash=99994085a3f29305
-y2=7
+$shader_id=5
 run=CommandListGUIShader
 run=CommandListMenuShader
 
@@ -234,7 +249,7 @@ hash=55642c752fa497f2
 if (ps-t0 == -3 || ps-t0 == -2 || ps-t0 == -1)
 	run=CustomShaderOutputGoalBoundsBatched
 endif
-y2=8
+$shader_id=4
 run=CommandListGUIShader
 run=CommandListDepthGoal
 
@@ -244,72 +259,72 @@ hash=7fdf27a3924d5530
 if (ps-t0 == -3 || ps-t0 == -2 || ps-t0 == -1)
 	run=CustomShaderOutputGoalBounds
 endif
-y2=3
+$shader_id=3
 run=CommandListGUIShader
 run=CommandListDepthGoal
 vs-cb11=ResourceMatrices
 
 [ShaderOverride_HUD+Images2]
 hash=9ceefab76c72863a
-y2=4
+$shader_id=6
 run=CommandListGUIShader
 
 [ShaderOverride_BlockColour]
 hash=2201df03f7a2d6a8
-y2=5
+$shader_id=7
 run=CommandListGUIShader
 
 [ShaderOverride_BlockColourBatched]
 hash=07a16668ff270883
-y2=6
+$shader_id=8
 run=CommandListGUIShader
 run=CommandListDepthVariables
 vs-cb11=ResourceMatrices
 
 [ShaderOverride_ShadowNetText]
 hash=bc2dd3947bd54b63
-y2=9
+$shader_id=9
 run=CommandListGUIShaderNoDump
 
 [ShaderOverride_ShadowNetTextBatched]
 hash=69dba94fd37b7ae4
-y2=10
+$shader_id=10
 run=CommandListGUIShaderNoDump
 
 [ShaderOverride_ShadowNetDecorations]
 hash=8024ec61c6f1d980
-y2=11
+$shader_id=11
 run=CommandListGUIShader
 run=CommandListMenuShader
 
 [ShaderOverride_ShadowNetImages]
 hash=564a374fdac29117
-y2=12
+$shader_id=12
 run=CommandListGUIShader
 
 [ShaderOverride_ShadowNetOverlay1-Colour]
 hash=99b627bfa17cbe1d
-y2=13
+$shader_id=13
 run=CommandListGUIShader
 
 [ShaderOverride_ShadowNetOverlay2-Colour]
 hash=3cb6ac24789031c7
-y2=14
+$shader_id=14
 run=CommandListGUIShader
 
 [ShaderOverride_ShadowNetBlockColour]
 hash=6a2a901c49cf4c66
-y2=15
+$shader_id=15
 run=CommandListGUIShader
 
 [ShaderOverride_ShadowNetBackground]
 hash=fdf0b6f2a4f3acec
-y2=16
+$shader_id=16
 run=CommandListGUIShader
 
 [ShaderOverride_ShadowNetBackgroundElement]
 hash=257d74e7390dfbb2
-y2=17
+$shader_id=17
 run=CommandListGUIShader
 
 [ShaderOverride_LightFlares]
