Fixed Tesselation in loadout by replacing shaders with weird format

--- a/Configs/Render Targets.ini
+++ b/Configs/Render Targets.ini
@@ -15,7 +15,36 @@ stereomode=1
 
 [ShaderOverride_ShadowMap]
 hash=7c5d68afebead6cc
-x3=$in_loadout_prev
+; Temporary fix
+x4=$in_loadout_prev
+
+[ShaderOverride_BodyPos3]
+hash=23d8e685b5bb9aee
+if ($in_loadout_prev)
+    handling=skip
+    run=CustomShader_BodyPos4
+endif
+
+[CustomShader_BodyPos4]
+hs = null
+ds = null
+vs = ShaderFixes\5a042ae7604f4360-vs_replace.txt
+topology = TRIANGLE_LIST
+draw=from_caller
+
+[ShaderOverride_HeadPos3]
+hash=594f0cceb152b7e9
+if ($in_loadout_prev)
+    handling=skip
+    run=CustomShader_BodyPos4
+endif
+
+[CustomShader_HeadPos4]
+hs = null
+ds = null
+vs = ShaderFixes\29192fa2cacefe00-vs_replace.txt
+topology = TRIANGLE_LIST
+draw=from_caller
 
 [Resource_LoadoutRenderTargetStereo]
 mode=stereo
