Consolidated ini params into "3Dmigoto.hlsl"

--- a/Configs/Cutscene.ini
+++ b/Configs/Cutscene.ini
@@ -8,7 +8,7 @@ release_transition=500
 
 [ShaderOverride_Lighting]
 hash=9345e42dbd2b2a06
-x3=$is_cutscene
+w2=$is_cutscene
 
 [ShaderOverride_DoF_Mask]
 hash=0c72e71802f7805a
