--- a/Configs/Menu Common Textures.ini
+++ b/Configs/Menu Common Textures.ini
@@ -9,7 +9,9 @@ $title_screen=0
 
 [ShaderOverride_Video]
 hash=9c28cf0e04d481ad
-x3=$title_screen_prev
+if (!y2)
+    y2=$title_screen_prev
+endif
 
 [TextureOverride_TitleScreenText]
 hash=08075193
