--- a/Configs/Menu Common Shaders.ini
+++ b/Configs/Menu Common Shaders.ini
@@ -10,22 +10,12 @@ global $shader_id=0
 global $max_id=0
 global $max_id_prev=0
 global $menu_open=0
-; Goals
-global $goals=0
-global $goalTexts=0
-global $goalBGs=0
-global $noDepth=0
 
 [Present]
 z2=$gui_separation
 $menu_open=0
 $max_id_prev=$max_id
 $max_id=0
-; Goals
-$goals=0
-$goalTexts=0
-$goalBGs=0
-$noDepth=0
 
 [KeyToggleUI]
 ; Hash/Tilde #/~
@@ -65,30 +55,30 @@ if ($isolate_id < 0)
 	$isolate_id = 0
 endif
 
-[KeyResetUIDepth]
+[KeyResetGUISeparation]
 ; Apostrophe/At '/@
 Key=VK_OEM_3 
 $gui_separation=0
 
-[KeyDecreaseUIDepth]
+[KeyDecreaseGUISeparation]
 ; Open Square/Curly Bracket [/{
 Key=VK_OEM_4
-run=CommandListDecrementDepthID
+run=CommandListDecrementGUISeparation
 
-[KeyIncreaseUIDepth]
+[KeyIncreaseGUISeparation]
 ; Close Square/Curly Bracket ]/}
 Key=VK_OEM_6 
-run=CommandListIncrementDepthID
+run=CommandListIncrementGUISeparation
 
-[CommandListResetDepthID]
+[CommandListResetGUISeparation]
 $gui_separation=0
 z2=$gui_separation
 
-[CommandListIncrementDepthID]
+[CommandListIncrementGUISeparation]
 $gui_separation=$gui_separation + 1
 z2=$gui_separation
 
-[CommandListDecrementDepthID]
+[CommandListDecrementGUISeparation]
 $gui_separation=$gui_separation - 1
 z2=$gui_separation
 
@@ -121,150 +111,37 @@ y=rt_height
 z=res_width
 w=res_height
 
-[Constants]
-global $show_depth=0
-
-[KeyToggleDepth]
-type=cycle
-Key=VK_OEM_2
-$show_depth=1,0
-
-[ResourceDepthBuffer]
-
-[ResourceMatrices]
-
-[Resource1x1]
-type=Texture2D
-width=1
-height=1
-format=R32_FLOAT
-mips=1
-array=1
-msaa=1
-
-[ResourceDepthValue]
-type=RWStructuredBuffer
-stride=4
-array=1
-
-[CommandListDepthBuffer]
-vs-t10=ResourceDepthBuffer
-
-[CommandListDepthVariables]
-run=CommandListDepthBuffer
-vs-cb11=ResourceMatrices
-
-[CustomShaderOutputGoalBounds]
-vs=ShaderFixes/depth_adjust_quad_vs.hlsl
-ps=ShaderFixes/depth_adjust_quad_ps.hlsl
-run=CommandListOutputGoalBounds
-
-[CustomShaderOutputGoalBoundsBatched]
-vs=ShaderFixes/depth_adjust_quad_vs_batched.hlsl
-ps=ShaderFixes/depth_adjust_quad_ps.hlsl
-run=CommandListOutputGoalBounds
-
-[CommandListOutputGoalBounds]
-run=BuiltInCommandListUnbindAllRenderTargets
-run=CommandListGUIShaderNoDump
-vs-t13=copy vb0
-ps-cb11=ResourceMatrices
-ps-t10=ResourceDepthBuffer
-o0=set_viewport Resource1x1
-ps-u1=ResourceDepthValue
-post ps-u1=null
-draw=from_caller
-
-[ShaderOverrideDepthSource]
-hash=29b5047597d81be1
-post ResourceDepthBuffer=copy ps-t0
-post ResourceMatrices=copy ps-cb11
-run=CommandListDisplayDepth
-
-[ShaderOverrideDepthSourceSonar]
-hash=5fe6d8164825fe0e
-post ResourceDepthBuffer=copy ps-t1
-post ResourceMatrices=copy ps-cb11
-run=CommandListDisplayDepth
-
-[CommandListDisplayDepth]
-;if ($show_depth)
-;Resource\ShaderFixes\Custom\debug_2d.ini\Debug2D=ResourceDepthBuffer
-;ps-cb11=ResourceMatrices
-;endif
-
-[CommandListDepthGoal]
-; If no depth has been calculated this does nothing
-if (!$noDepth)
-	vs-t14=ResourceDepthValue
-endif
-post vs-t14=null
-; Start of Goal
-if (ps-t0 == -2)
-	post $goals = $goals + 1
-endif
-; End of Goal (2 drawn)
-if (ps-t0 == -2.5)
-	post $goalBGs = $goalBGs + 1
-endif
-; Reset Depth @ End of Target/Goal/Crosshair
-if ((ps-t0 == -2.5 && $goalBGs == 2) || ps-t0 == -3.5 || ps-t0 == -1)
-	post $goalBGs = 0
-	post clear=ResourceDepthValue
-endif
-
 [ShaderOverride_Text]
 hash=6f56e2eb15c63f14
-; Goal texts are drawn first, we count them
-if ($goals)
-	post $goalTexts = $goalTexts + 1
-endif
-; Two texts are drawn per Goal, 
-; we know how many goals have been drawn, 
-; so if we exceed 2*Goals, don't use depth
-if ($goalTexts >= ($goals * 2))
-	pre $noDepth=1
-	; reset so further goal graphics use depth
-	post $noDepth=0
-endif
+allow_duplicate_hash=true
 $shader_id=1
 run=CommandListGUIShaderNoTextures
-run=CommandListDepthGoal
 
 [ShaderOverride_TextBatched]
 hash=9fe114e79584a0ac
+allow_duplicate_hash=true
 $shader_id=2
 run=CommandListGUIShaderNoTextures
-run=CommandListDepthGoal
 
-[ShaderOverride_Decorations]
+[ShaderOverride_Sprites]
+hash=7fdf27a3924d5530
+allow_duplicate_hash=true
+$shader_id=3
+run=CommandListGUIShader
+
+[ShaderOverride_SpritesBatched]
+hash=55642c752fa497f2
+allow_duplicate_hash=true
+$shader_id=4
+run=CommandListGUIShader
+
+[ShaderOverride_Decorations1]
 hash=99994085a3f29305
 $shader_id=5
 run=CommandListGUIShader
 run=CommandListMenuShader
 
-[ShaderOverride_DecorationsBatched]
-hash=55642c752fa497f2
-; Calculate Depth @ Start of Target/Goal/Crosshair
-if (ps-t0 == -3 || ps-t0 == -2 || ps-t0 == -1)
-	run=CustomShaderOutputGoalBoundsBatched
-endif
-$shader_id=4
-run=CommandListGUIShader
-run=CommandListDepthGoal
-
-[ShaderOverride_HUD+Images1]
-hash=7fdf27a3924d5530
-; Calculate Depth @ Start of Target/Goal/Crosshair
-if (ps-t0 == -3 || ps-t0 == -2 || ps-t0 == -1)
-	run=CustomShaderOutputGoalBounds
-endif
-$shader_id=3
-run=CommandListGUIShader
-run=CommandListDepthGoal
-vs-cb11=ResourceMatrices
-
-[ShaderOverride_HUD+Images2]
+[ShaderOverride_Decorations2]
 hash=9ceefab76c72863a
 $shader_id=6
 run=CommandListGUIShader
@@ -276,10 +153,9 @@ run=CommandListGUIShader
 
 [ShaderOverride_BlockColourBatched]
 hash=07a16668ff270883
+allow_duplicate_hash=true
 $shader_id=8
 run=CommandListGUIShader
-run=CommandListDepthVariables
-vs-cb11=ResourceMatrices
 
 [ShaderOverride_ShadowNetText]
 hash=bc2dd3947bd54b63
@@ -326,14 +202,6 @@ run=CommandListGUIShader
 hash=257d74e7390dfbb2
 $shader_id=17
 run=CommandListGUIShader
-
-[ShaderOverride_LightFlares]
-hash=c4c52320554d1ee9
-run=CommandListDepthBuffer
-vs-t13=copy vb0
-
-[ShaderOverride_Glowing_Bits]
-hash=0639e523abe03973
 
 ;run= CommandListDumpTex
 [CommandListDumpTex]
